--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,14 +8,13 @@
     android:gravity="center_vertical"
     android:layout_marginTop="50dp"
     android:padding="8dp"
-    tools:context=".MainActivity">
+    tools:context=".LoginActivity">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/image"
         android:layout_width="400dp"
         android:layout_height="150dp"
         android:layout_marginTop="14dp"
-        android:contentDescription="TODO"
         android:src="@drawable/holybible_logo" />
 
     <com.google.android.material.textview.MaterialTextView
@@ -45,7 +44,6 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/password_text_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:passwordToggleEnabled="true"
